# arxivxml

./: README.md  author.dtd  pub_ref.toml  pyproject.toml  setup.cfg
arxivxml/: __main__.py
